--- a/css/style.css
+++ b/css/style.css
@@ -441,19 +441,47 @@ body{
 /*** Service ***/
 .service-item .service-text {
     position: relative;
-    width:100%;
+    width: 100%;
     top: 0;
     left: 0;
     text-align: center;
     background: #FFFFFF;
     box-shadow: 0 0 40px rgba(0, 0, 0, .06);
-    transition: .5s;
     z-index: 2;
 }
 
-.service-item:hover .service-text {
-    top: -1rem;
+.service-item img{
+  opacity: 1;
+  transition: opacity 0.4s ease;
 }
+
+.content-service{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    background: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.041);
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    z-index: 2;
+}
+
+.service-item:hover img {
+  opacity: 0;
+}
+
+.service-item:hover .content-service{
+  opacity: 1;
+}
+
+/* .service-item:hover .service-text {
+    top: -1rem;
+} */
 
 .service-item .service-text h5 {
     transition: .5s;
