--- a/css/style.css
+++ b/css/style.css
@@ -456,19 +456,20 @@ body{
 }
 
 .content-service{
-    position: absolute;
-    width:100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    left: 0;
-    background: #FFFFFF;
-    background-color: rgba(0, 0, 0, 0.041);
-    opacity: 0;
-    transition: opacity 0.4s ease;
-    z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.048);
+  color: #000000;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  z-index: 2;
 }
 
 .service-item:hover img {
@@ -477,6 +478,17 @@ body{
 
 .service-item:hover .content-service{
   opacity: 1;
+}
+
+.content-service ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.content-service li {
+  font-size: 20px;
+  line-height: 1.8;
 }
 
 /* .service-item:hover .service-text {
