--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,9 @@
 /********** Template CSS **********/
 body{
     background-color: #EEEEEE;
-    cursor: none; /* Oculta el cursor predeterminado */
+    /*cursor: none; /* Oculta el cursor predeterminado */
 }
 
-
-/* Cursor Start */
-#custom-cursor {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 20px; /* Ajusta el tamaño */
-  height: 20px;
-  border: 4px solid #00296b; /* Estilo del cursor */
-  border-radius: 50%; /* Forma circular */
-  pointer-events: none; /* Evita que interfiera con clics */
-  z-index: 9999;
-  transition: transform 0.1s ease;
-  transform: translate(-50%, -50%); /* Centra el cursor personalizado */
-  pointer-events: none; /* Evita que el cursor estándar interfiera */
-}
-
-a, button {
-  cursor: none; /* Oculta el cursor estándar en enlaces y botones */
-  pointer-events: auto; /* Mantén la funcionalidad de clic */
-}
-
-a:hover #custom-cursor {
-  transform: scale(1.5); /* Agranda el cursor */
-  background-color: #00296b3d; /* Cambia el fondo */
-  border-color: #00296b; /* Cambia el color del borde */
-}
-/* Cursor End */
 
 
 /* Estilo de la barra de scroll */
@@ -67,59 +39,10 @@ a:hover #custom-cursor {
     --dark: #1C2035;
 }
 
-.back-to-top {
-    position: fixed;
-    display: none;
-    right: 30px;
-    bottom: 30px;
-    z-index: 99;
-}
 
 
 .fw-medium {
     font-weight: 500;
-}
-
-
-/* Prueba */
-.row1 {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  padding: 4px 4px;
-}
-
-/* Create four equal columns that sits next to each other */
-.column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
 }
 
 
@@ -225,88 +148,46 @@ a:hover #custom-cursor {
 
 
 /*** Loader/Animación de carga ***/
-.loader {
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100vh;
-    transition: width 0s 1.4s ease;
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #001f3f; /* Azul marino */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+#loader.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-top: 5px solid #fff; /* Blanco */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
   }
-  .loader .loader__icon {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    opacity: 0;
-    transition: opacity 0.5s ease;
+  to {
+    transform: rotate(360deg);
   }
-  .loader .loader__icon svg {
-    transform-origin: 0 0;
-  }
-  .loader .loader__tile {
-    position: absolute;
-    left: 0;
-    width: 0;
-    height: 20%;
-    background-color: #00296b;
-    transition: width 0.7s ease;
-  }
-  .loader .loader__tile:nth-child(0) {
-    top: calc(-1 * 20%);
-    transition-delay: -0.2s;
-  }
-  .loader .loader__tile:nth-child(1) {
-    top: calc(0 * 20%);
-    transition-delay: 0s;
-  }
-  .loader .loader__tile:nth-child(2) {
-    top: calc(1 * 20%);
-    transition-delay: 0.2s;
-  }
-  .loader .loader__tile:nth-child(3) {
-    top: calc(2 * 20%);
-    transition-delay: 0.4s;
-  }
-  .loader .loader__tile:nth-child(4) {
-    top: calc(3 * 20%);
-    transition-delay: 0.6s;
-  }
-  .loader .loader__tile:nth-child(5) {
-    top: calc(4 * 20%);
-    transition-delay: 0.8s;
-  }
-  .loader--active {
-    width: 100%;
-    transition-delay: 0s;
-  }
-  .loader--active .loader__icon {
-    opacity: 1;
-    transition: opacity 0.5s 1.4s ease;
-  }
-  .loader--active .loader__tile {
-    width: 100%;
-  }
-  .loader--active .loader__tile:nth-child(0) {
-    transition-delay: -0.2s;
-  }
-  .loader--active .loader__tile:nth-child(1) {
-    transition-delay: 0s;
-  }
-  .loader--active .loader__tile:nth-child(2) {
-    transition-delay: 0.2s;
-  }
-  .loader--active .loader__tile:nth-child(3) {
-    transition-delay: 0.4s;
-  }
-  .loader--active .loader__tile:nth-child(4) {
-    transition-delay: 0.6s;
-  }
-  .loader--active .loader__tile:nth-child(5) {
-    transition-delay: 0.8s;
-  }
+}
+
+main {
+  display: none;
+}
 
 
 /*** Button ***/
@@ -583,6 +464,70 @@ a:hover #custom-cursor {
   color: #fff;
 }
 
+
+/* cards contact start */
+.card-contact {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  width: 100%; /* Asegura que ocupe todo el ancho del contenedor */
+  max-width: 300px; /* Define el ancho máximo del card */
+  min-height: 200px; /* Establece una altura mínima */
+  margin: 20px auto; /* Centra el card horizontalmente */
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.4s ease;
+  background: linear-gradient(135deg, #ffffff, #f0f0f0);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .card-contact {
+    max-width: 100%; /* Ocupa todo el ancho disponible en pantallas pequeñas */
+    min-height: 200px; /* Reduce la altura mínima en pantallas pequeñas */
+  }
+}
+
+@media (min-width: 1200px) {
+  .card-contact {
+    max-width: 400px; /* Amplía el tamaño en pantallas grandes */
+    min-height: 250px;
+  }
+}
+
+.card-contact:hover {
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(135deg, #ffffffda, #c9c9c9);
+  border: 2px solid #8eb9ff; /* Añade un borde de color alrededor de la card */
+  transition: border-color 0.5s ease; /* Añade una transición suave para el cambio de color del borde */
+  
+}
+
+.card-contact img {
+  transition: filter 0.4s ease;
+}
+
+.card-contact h3 {
+  transition: 0.4s ease;
+  color: #00296b;
+}
+
+.card-contact:hover h3{
+  color: #050505;
+}
+
+.card-contact:hover p{
+  color: #050505;
+}
+
+.card-contact:hover a{
+  color: #050505;
+}
+
+
+
+/* Cards contact End */
+
+
 /* Efecto de brillo */
 .card::before {
   content: "";
@@ -615,9 +560,6 @@ a:hover #custom-cursor {
   color: #fff;
 }
 
-/* .service-item:hover .service-text {
-    top: -1rem;
-} */
 
 .service-item .service-text h5 {
     transition: .5s;
@@ -627,24 +569,7 @@ a:hover #custom-cursor {
     color: var(--primary);
 }
 
-.service-item .service-btn {
-    position: absolute;
-    width: 90%;
-    height: 60px;
-    left: 0%;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #FFFFFF;
-    box-shadow: 0 0 50px rgba(0, 0, 0, .10);
-    transition: .5s;
-    z-index: 1;
-}
 
-.service-item:hover .service-btn {
-    bottom: -1rem;
-}
 
 
 /*** Project ***/
@@ -985,4 +910,47 @@ dialog p a:visited {
 
 .btn-primary:hover {
   background-color: #001f4d; /* Color de fondo en hover */
+}
+
+
+
+/* back-to-up */
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: #00296b63;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 1000;
+}
+
+/* Mostrar botón al hacer scroll */
+.back-to-top.visible {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+
+/* Animación al hacer clic */
+.back-to-top:active {
+  transform: scale(0.9);
+}
+
+/* Hover efecto */
+.back-to-top:hover {
+  background-color: #839ec4;
+  border: 2px solid #00296b77;
+  
 }
