--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,51 @@
 /********** Template CSS **********/
 body{
     background-color: #EEEEEE;
-    /*cursor: none; /* Oculta el cursor predeterminado */
+
 }
 
+:root {
+    --primary: #00296b;
+    --secondary: #FFFFFF;
+    --light: #F1F3FA;
+    --dark: #1C2035;
+}
+
+/* Loader */
+/* Loader inicial */
+#loader {
+  position: fixed;
+  inset: 0;
+  background-color: #00296b;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.8s ease, visibility 0.8s ease;
+  opacity: 1;
+  visibility: visible;
+}
+
+#loader.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader-content {
+  width: 200px;
+  height: 200px;
+}
+
+/* Opcional: para evitar scroll durante la carga */
+body.loading {
+  overflow: hidden;
+}
+
+
+
+.fw-medium {
+    font-weight: 500;
+}
 
 
 /* Estilo de la barra de scroll */
@@ -30,20 +72,6 @@ body{
   background: #0056b3; /* Color más oscuro en hover */
 }
 /* Estilo de la barra de scroll */
-
-
-:root {
-    --primary: #00296b;
-    --secondary: #FFFFFF;
-    --light: #F1F3FA;
-    --dark: #1C2035;
-}
-
-
-
-.fw-medium {
-    font-weight: 500;
-}
 
 
 /**text**/
@@ -145,91 +173,6 @@ body{
   width: 50%;  
   margin: auto;
 }
-
-
-#loader-wrapper {
-        position: fixed;
-        top: 0; left: 0; right: 0; bottom: 0;
-        width: 100vw; height: 100vh;
-        background: #00296b;
-        z-index: 9999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: opacity 0.3s;
-    }
-    #loader-wrapper.hidden {
-        opacity: 0;
-        pointer-events: none;
-        visibility: hidden;
-    }
-    #loader-wrapper.fade-out {
-        opacity: 0;
-        transition: opacity 0.7s ease;
-        pointer-events: none;
-    }
-    .spinner-lines {
-        position: relative;
-        width: 64px;
-        height: 64px;
-        --uib-color:rgb(170, 170, 170);
-        --uib-speed: 1.2s;
-        --uib-stroke: 6px;
-    }
-    .spinner-lines .line {
-        position: absolute;
-        top: 0;
-        left: calc(50% - var(--uib-stroke) / 2);
-        display: flex;
-        align-items: flex-start;
-        height: 100%;
-        width: var(--uib-stroke);
-    }
-    .spinner-lines .line::before {
-        content: '';
-        height: 22%;
-        width: 100%;
-        border-radius: calc(var(--uib-stroke) / 2);
-        background-color: var(--uib-color);
-        animation: pulse var(--uib-speed) ease-in-out infinite;
-        transition: background-color 0.3s ease;
-        transform-origin: center bottom;
-        display: block;
-    }
-    .spinner-lines .line:nth-child(1)  { transform: rotate(calc(360deg / -12 * 1)); }
-    .spinner-lines .line:nth-child(2)  { transform: rotate(calc(360deg / -12 * 2)); }
-    .spinner-lines .line:nth-child(3)  { transform: rotate(calc(360deg / -12 * 3)); }
-    .spinner-lines .line:nth-child(4)  { transform: rotate(calc(360deg / -12 * 4)); }
-    .spinner-lines .line:nth-child(5)  { transform: rotate(calc(360deg / -12 * 5)); }
-    .spinner-lines .line:nth-child(6)  { transform: rotate(calc(360deg / -12 * 6)); }
-    .spinner-lines .line:nth-child(7)  { transform: rotate(calc(360deg / -12 * 7)); }
-    .spinner-lines .line:nth-child(8)  { transform: rotate(calc(360deg / -12 * 8)); }
-    .spinner-lines .line:nth-child(9)  { transform: rotate(calc(360deg / -12 * 9)); }
-    .spinner-lines .line:nth-child(10) { transform: rotate(calc(360deg / -12 * 10)); }
-    .spinner-lines .line:nth-child(11) { transform: rotate(calc(360deg / -12 * 11)); }
-    .spinner-lines .line:nth-child(12) { transform: rotate(calc(360deg / -12 * 12)); }
-    .spinner-lines .line:nth-child(1)::before  { animation-delay: calc(var(--uib-speed) / -12 * 1); }
-    .spinner-lines .line:nth-child(2)::before  { animation-delay: calc(var(--uib-speed) / -12 * 2); }
-    .spinner-lines .line:nth-child(3)::before  { animation-delay: calc(var(--uib-speed) / -12 * 3); }
-    .spinner-lines .line:nth-child(4)::before  { animation-delay: calc(var(--uib-speed) / -12 * 4); }
-    .spinner-lines .line:nth-child(5)::before  { animation-delay: calc(var(--uib-speed) / -12 * 5); }
-    .spinner-lines .line:nth-child(6)::before  { animation-delay: calc(var(--uib-speed) / -12 * 6); }
-    .spinner-lines .line:nth-child(7)::before  { animation-delay: calc(var(--uib-speed) / -12 * 7); }
-    .spinner-lines .line:nth-child(8)::before  { animation-delay: calc(var(--uib-speed) / -12 * 8); }
-    .spinner-lines .line:nth-child(9)::before  { animation-delay: calc(var(--uib-speed) / -12 * 9); }
-    .spinner-lines .line:nth-child(10)::before { animation-delay: calc(var(--uib-speed) / -12 * 10); }
-    .spinner-lines .line:nth-child(11)::before { animation-delay: calc(var(--uib-speed) / -12 * 11); }
-    .spinner-lines .line:nth-child(12)::before { animation-delay: calc(var(--uib-speed) / -12 * 12); }
-    @keyframes pulse {
-        0%, 80%, 100% {
-            transform: scaleY(0.75);
-            opacity: 0;
-        }
-        20% {
-            transform: scaleY(1);
-            opacity: 1;
-        }
-    }
 
 
 /*** Button ***/
@@ -367,7 +310,7 @@ body{
 @media (max-width: 768px) {
     #header-carousel .carousel-item {
         position: relative;
-        min-height: 450px;
+        min-height: 700px;
     }
     
     #header-carousel .carousel-item img {
@@ -376,8 +319,8 @@ body{
         height: 70%;
         object-fit: cover; */
         position: absolute;
-        width: 80%;
-        height: 80%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
 
     }
@@ -387,6 +330,7 @@ body{
     background: url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
+
 
 
 .page-header .breadcrumb-item+.breadcrumb-item::before {
